# matvecmul

./: .gitignore  Cargo.toml  README.md  bench.txt  test_10_20_5.txt
benches/: cyclotomic_ring_bench.rs  functionality_bench.rs
scripts/: bench.raw  gen_plots.py  main.tex
scripts/bench_figs/: fig_T1024_verifier.tex  fig_T128_verifier.tex  fig_T16_verifier.tex  fig_T256_verifier.tex  fig_T2_verifier.tex  fig_T32_verifier.tex  fig_T4_verifier.tex  fig_T512_verifier.tex  fig_T64_verifier.tex  fig_T8_verifier.tex
scripts/bench_tables/: proof_sizes.tex  prover_times.tex
src/: lib.rs  main.rs  rand.rs
src/arith/: cyclotomic_ring.rs  field.rs  linalg.rs  mod.rs  polynomial_ring.rs  ring.rs
src/arith/ntt/: mod.rs  ntt.rs  tfhe_based_ntt.rs
src/protocol/: mod.rs  utils.rs
src/protocol/pcs/: mod.rs  whir.rs
src/protocol/prover/: mod.rs  whir.rs
src/protocol/sumcheck/: mod.rs  multilinear.rs  univariate.rs
src/protocol/transcript/: mod.rs
src/protocol/verifier/: mod.rs
src/rlwe/: mod.rs
