[package]
name = "matvec"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5.0"
ark-std = "0.5.0"
rand = "0.9.1"
rayon = "1.11.0"
tfhe-ntt = "0.6.0"

[dev-dependencies]
criterion = "0.7.0"

[[bin]]
name = "matvec"
path = "src/bin/main.rs"

[[bench]]
name = "cyclotomic_ring_bench"
harness = false
